# matrix-bots

./: Cargo.toml  README.md
email-to-matrix/: Cargo.toml
email-to-matrix/src/: lib.rs  main.rs
email-to-matrix/systemd-files/: email-to-matrix.service  email-to-matrix.socket
encrypted-message/: Cargo.toml
encrypted-message/src/: lib.rs
encrypted-sender/: Cargo.toml
encrypted-sender/src/: main.rs
encrypted-server/: Cargo.toml
encrypted-server/src/: lib.rs
encrypted-startup/: Cargo.toml
encrypted-startup/src/: lib.rs
encrypted-string/: Cargo.toml
encrypted-string/src/: lib.rs
encryption-helper/: Cargo.toml
encryption-helper/src/: main.rs
mail-bot/: Cargo.toml
mail-bot/src/: lib.rs  main.rs
mail-bot/systemd-files/: mail-bot.service
mail-server/: Cargo.toml
mail-server/src/: lib.rs
matrix-room-bot/: Cargo.toml
matrix-room-bot/src/: lib.rs
matrix-room-bot/systemd-files/: matrix-room-bot.service
matrix-util/: Cargo.toml
matrix-util/src/: lib.rs
opnsense-bot/: Cargo.toml
opnsense-bot/src/: main.rs
webhook-bot/: Cargo.toml
webhook-bot/src/: main.rs
webhook-bot/systemd-files/: webhook-bot.service
