[workspace]
members = [ "email-to-matrix", "encrypted-message", "encrypted-sender", "encrypted-startup", "encryption-helper", "mail-server"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
futures-util = "0.3.30"
#matrix-sdk = "0.7.1"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk"}
tokio = {version = "1.39.2",  features = ["macros", "rt-multi-thread", "io-std", "net"]}
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3"
tarpc = { version = "0.34", features = ["full"] }
url = "2.5.2"
rand = { version = "0.8.5", features = ["getrandom"] }
mailin = "0.6.4"
retry = "2.0.0"
aes-gcm = "0.10.3"
log = "0.4.22"
env_logger = "0.11.5"
mail-parser = "0.9.3"
crypto_box = { version = "0.9.1", features = ["chacha20", "serde"] }
clap = { version = "4.5.20", features = ["derive"] }

