[package]
name = "email-to-matrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "etm-microservice"
test = false

[[bin]]
name = "etm-session-builder"
test = false

[lib]
name = "config"

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
crypto_box = { workspace = true }
encrypted-startup = { path = "../encrypted-startup" }
encrypted-string = { path = "../encrypted-string" }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
mail-server = { path = "../mail-server" }
matrix-sdk = { workspace = true }
matrix-util = { path = "../matrix-util" }
retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
tarpc = { workspace = true }
tokio = { workspace = true }

