[package]
name = "mail-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
mail-server = { path = "../mail-server" }
matrix-room-bot = { path = "../matrix-room-bot" }
serde = { workspace = true }
serde_json = { workspace = true } 
tarpc = { workspace = true }
tokio = { workspace = true }

