[package]
name = "matrix-util"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
encrypted-string = { path = "../encrypted-string" }
futures-util = { workspace = true }
log = { workspace = true }
matrix-sdk = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
tokio = { workspace = true }
